Fixed icon rotation with missing class. Seems to work on mobile

--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -54,7 +54,13 @@
         }
     }
 }
-        
+  
+.feature-item {
+    & > * {
+        margin-bottom: 0.3em; // tighten spacing in children
+    }
+    margin-bottom: 0.8rem;
+}      
 // @include transition(opacity $timing-default);
 
 .platform { // this is injected into body via MM
